@@ -139,8 +139,8 @@ Average
 
     for ( std::list<cmtk::UniformVolume::SmartPtr>::const_iterator it = volumes.begin(); it != volumes.end(); ++it )
       {
-      cmtk::UniformVolume::SmartPtr insideDistanceMap( new cmtk::UniformDistanceMap<float>( *(*it), distanceMapFlags + cmtk::UniformDistanceMap<float>::INSIDE, label ) );
-      cmtk::UniformVolume::SmartPtr  outsideDistanceMap( new cmtk::UniformDistanceMap<float>( *(*it), distanceMapFlags, label ) );
+      cmtk::UniformVolume::SmartPtr insideDistanceMap = cmtk::UniformDistanceMap<float>( *(*it), distanceMapFlags + cmtk::UniformDistanceMap<float>::INSIDE, label ).Get();
+      cmtk::UniformVolume::SmartPtr outsideDistanceMap = cmtk::UniformDistanceMap<float>( *(*it), distanceMapFlags, label ).Get();
 
       const float* insideDistancePtr = (const float*)insideDistanceMap->GetData()->GetDataPtr();
       const float* outsideDistancePtr = (const float*)outsideDistanceMap->GetData()->GetDataPtr();
@@ -281,8 +281,8 @@ AverageWindowed
     std::list<cmtk::UniformVolume::SmartPtr>::const_iterator it;
     for ( it = volumes.begin(); it != volumes.end(); ++it )
       {
-      cmtk::UniformVolume::SmartPtr insideDistanceMap( new cmtk::UniformDistanceMap<float>( *(*it), distanceMapFlags + cmtk::UniformDistanceMap<float>::INSIDE, label, FeatureWindowRadius) );
-      cmtk::UniformVolume::SmartPtr outsideDistanceMap( new cmtk::UniformDistanceMap<float>( *(*it), distanceMapFlags, label, FeatureWindowRadius ) );
+      cmtk::UniformVolume::SmartPtr insideDistanceMap = cmtk::UniformDistanceMap<float>( *(*it), distanceMapFlags + cmtk::UniformDistanceMap<float>::INSIDE, label, FeatureWindowRadius).Get();
+      cmtk::UniformVolume::SmartPtr outsideDistanceMap = cmtk::UniformDistanceMap<float>( *(*it), distanceMapFlags, label, FeatureWindowRadius ).Get();
       
       const float* insideDistancePtr = (const float*)insideDistanceMap->GetData()->GetDataPtr();
       const float* outsideDistancePtr = (const float*)outsideDistanceMap->GetData()->GetDataPtr();
@@ -443,8 +443,8 @@ Average
       {
       const size_t nPixelsFloating = (*itV)->GetNumberOfPixels();
 
-      cmtk::UniformVolume::SmartPtr insideDistanceMap( new cmtk::UniformDistanceMap<float>( *(*itV), distanceMapFlags + cmtk::UniformDistanceMap<float>::INSIDE, label ) );
-      cmtk::UniformVolume::SmartPtr inOutDistanceMap( new cmtk::UniformDistanceMap<float>( *(*itV), distanceMapFlags, label ) );
+      cmtk::UniformVolume::SmartPtr insideDistanceMap = cmtk::UniformDistanceMap<float>( *(*itV), distanceMapFlags + cmtk::UniformDistanceMap<float>::INSIDE, label ).Get();
+      cmtk::UniformVolume::SmartPtr inOutDistanceMap = cmtk::UniformDistanceMap<float>( *(*itV), distanceMapFlags, label ).Get();
       
       cmtk::UniformVolumeInterpolator<cmtk::Interpolators::Linear> interpolator( inOutDistanceMap );
       
@@ -607,8 +607,8 @@ AverageWindowed
       {
       const size_t nPixelsFloating = (*itV)->GetNumberOfPixels();
 
-      cmtk::UniformVolume::SmartPtr insideDistanceMap( new cmtk::UniformDistanceMap<float>( *(*itV), distanceMapFlags + cmtk::UniformDistanceMap<float>::INSIDE, label, FeatureWindowRadius ) );
-      cmtk::UniformVolume::SmartPtr inOutDistanceMap ( new cmtk::UniformDistanceMap<float>( *(*itV), distanceMapFlags, label, FeatureWindowRadius ) );
+      cmtk::UniformVolume::SmartPtr insideDistanceMap = cmtk::UniformDistanceMap<float>( *(*itV), distanceMapFlags + cmtk::UniformDistanceMap<float>::INSIDE, label, FeatureWindowRadius ).Get();
+      cmtk::UniformVolume::SmartPtr inOutDistanceMap = cmtk::UniformDistanceMap<float>( *(*itV), distanceMapFlags, label, FeatureWindowRadius ).Get();
       cmtk::UniformVolumeInterpolator<cmtk::Interpolators::Linear> interpolator( inOutDistanceMap );
       
       const float* insideDistancePtr = static_cast<const float*>( insideDistanceMap->GetData()->GetDataPtr() );
