@@ -1,5 +1,7 @@
 Release CMTK-1.3.1:
 
+- Refactored: UniformDistanceMap is now a factory class and no longer directly
+    inherits from UniformVolume.x
 - API: renamed "GetDownsampled" member in DataGrid and UniformVolume classes
     to "GetDownsampledAndAveraged" to clarify that this is a
     downsampling-and-averaging operation, not just a downsampling.
